--- a/views/account.pug
+++ b/views/account.pug
@@ -14,7 +14,7 @@ block content
             nav.user-view__menu
                 ul.side-nav
                     +navItem('#','Setting','settings', true)
-                    +navItem('#','My bookings','briefcase')
+                    +navItem('/my-tours','My bookings','briefcase')
                     +navItem('#','My reviews','star')
                     +navItem('#','Billing','credit-card')
 
@@ -23,8 +23,7 @@ block content
                         h5.admin-nav__heading Admin
                         ul.side-nav
                             //- +navItem('#','Manage tours','map') nguyên mẫu, bên dưới tự làm
-                            +navItem('/create-tour','Manage tours','map')
-
+                            +navItem('#','Manage tours','map')
                             +navItem('#','Manage users','users')
                             +navItem('#','Manage reviews','star')
                             +navItem('#','Manage booking','briefcase')
