--- a/views/_header.pug
+++ b/views/_header.pug
@@ -5,13 +5,13 @@ header.header
                 img(src="/img/logo-white.png" alt="Natours logo")
     nav.nav.nav--user
         if user 
-            a(href="#" class="nav__el nav__el--logout") Log Out
+            a(href="/logout" class="nav__el nav__el--logout") Log Out
             a(href="/me" class="nav__el") 
                 img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
                 span= user.name.split(' ')[0]
         else
             a.nav__el.nav__el--cta(href='/login') Log in
-            a.nav__el.nav__el--cta(href='/signup') Sign up
+            a.nav__el.nav__el--cta(href='#') Sign up
 
 
             //- if user kiểm tra xem có tồn tại dữ liệu user trong res.locals không
